--- a/AIEnglishLearningJapaneseN1/单词/View/AIEnglishLearningJapaneseStudyWordCollectionViewCell.xib
+++ b/AIEnglishLearningJapaneseN1/单词/View/AIEnglishLearningJapaneseStudyWordCollectionViewCell.xib
@@ -1,21 +1,42 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.59" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.45"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="AIEnglishLearningJapaneseStudyWordCollectionViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="444" height="136"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="444" height="136"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bqR-pd-uMf">
+                        <rect key="frame" x="0.0" y="0.0" width="444" height="136"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="SEy-5g-ep8"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="bqR-pd-uMf" secondAttribute="bottom" id="OHo-Q3-1l8"/>
+                <constraint firstAttribute="trailing" secondItem="bqR-pd-uMf" secondAttribute="trailing" id="c5a-qg-zwp"/>
+                <constraint firstItem="bqR-pd-uMf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="gOm-CS-HtE"/>
+                <constraint firstItem="bqR-pd-uMf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rl5-F6-o7J"/>
+            </constraints>
+            <size key="customSize" width="444" height="136"/>
+            <connections>
+                <outlet property="AIEnglishLearningJapaneseStudyWordTitleLabel" destination="bqR-pd-uMf" id="ihq-zf-ier"/>
+            </connections>
+            <point key="canvasLocation" x="452.80000000000001" y="159.22038980509745"/>
         </collectionViewCell>
     </objects>
 </document>
